Update file structure

--- a/03.tex
+++ b/03.tex
@@ -11,3 +11,4 @@ Celkem 24 písmen \\
 % Počet kombinací slova LUMP na všech pozicích
 % $$ (24 - 4 + 1) \cdot 20! = 21 \cdot 20! $$
 
+$ 24! - \frac{24!}{5!} - \frac{24!}{4!} + 2 \cdot \frac{24!}{6!}$
