--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,10 @@
-\documentclass{article}
+\documentclass[11pt,a4paper,oneside]{article}
 \usepackage{amsfonts}
 \usepackage{amsmath}
+\usepackage{amssymb}
 \usepackage{tikz}
+\usepackage[left=2cm,top=3cm]{geometry}
+
 \usetikzlibrary{datavisualization}
 \usetikzlibrary{datavisualization.formats.functions}
 
@@ -10,6 +13,7 @@
 \begin{document}
 
 % Řešení jednotlivých příkladů
+\input{credits.tex}
 \input{01.tex}
 \input{02.tex}
 \input{03.tex}
